@@ -1,3 +1,12 @@
+2015-07-09  Youenn Fablet  <youenn.fablet@crf.canon.fr>
+
+        [Streams API] Fix readable-stream-tee.html
+        https://bugs.webkit.org/show_bug.cgi?id=146803
+
+        Reviewed by Darin Adler.
+
+        * streams/reference-implementation/readable-stream-tee.html:
+
 2015-07-09  Daniel Bates  <dabates@apple.com>
 
         Fetching Content Security Policy report URL should respect same origin policy
